[workspace]
members = ["cosmos-anybuf", "anybuf-gen", "contracts/*"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anybuf = "0.4.0"
anyhow = "1.0.75"
chatgpt_rs = "1.2.3"
cosmwasm-std = { version = "1.5.0", features = ["stargate"] }
cosmwasm-schema = { version = "1.5.0" }
dotenv = "0.15.0"
lazy_static = "1.4.0"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
nom = "7.1.3"
