[package]
name = "anybuf-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
chatgpt_rs = { workspace = true }
dotenv = { workspace = true }
lazy_static = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
nom = { workspace = true }
