[package]
name = "cosmos-anybuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cosmwasm-schema = { workspace = true }
anybuf = { workspace = true }

[dev-dependencies]
osmosis-std = "0.20.0"
